<resources>
    <string name="app_name">MusicClient</string>

    <string name="id_hint">id</string>
    <string name="name_hint">name</string>
    <string name="album_hint">album</string>

    <string name="create_button_text">C</string>
    <string name="readEntry_button_text">R</string>
    <string name="update_button_text">U</string>
    <string name="delete_button_text">D</string>

    <string name="read_button_text">Read all</string>
</resources>
